<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title2"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="540dp"
        android:fontFamily="@font/sf_ui_display_light"
        android:text="using Camer-Art"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:textSize="40sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="71dp"
        android:layout_height="62dp"
        android:layout_marginEnd="168dp"
        android:layout_marginBottom="592dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/logo" />

    <ScrollView
        android:layout_width="394dp"
        android:layout_height="508dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Main_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Main menu"
                android:textAlignment="center"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/Style_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Style camera"
                android:textAlignment="center"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/camera" />

            <TextView
                android:id="@+id/Style_cameratxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Stylecamera"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/Uploadtool"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Upload tool"
                android:textAlignment="center"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/Utooltxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uploadtool"
                android:textAlignment="center"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/Uploadtoolcamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Upload from camera"
                android:textAlignment="center"
                android:textSize="23sp" />
            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/uploadmain" />

            <TextView
                android:id="@+id/Ucameratxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uploadtoolcamera"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/Uploadtoolgallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Upload from gallery"
                android:textAlignment="center"
                android:textSize="23sp" />
            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/gallery" />
            <TextView
                android:id="@+id/Ugallerytxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uploadtoolgallery"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/othertitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Where are my photos?"
                android:textAlignment="center"
                android:textSize="28sp" />
            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/disk" />
            <TextView
                android:id="@+id/other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/Contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Contact us"
                android:textAlignment="center"
                android:textSize="28sp" />
            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/at" />
            <TextView
                android:id="@+id/Contacttxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/myemail"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>